--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -5,34 +5,9 @@ p8105_hw2_lk2776
 ``` r
 #load packages; print 3 lines of tibble output
 library(tidyverse)
-library(readxl)
-options(tibble.print_min=5)
 ```
 
 ## problem1:
-
-The cleaned NYC dataset contains line, station_name, station_latitude,
-station_longitude, routes1-11, entry, vending, entrance_type, ada
-variables. The cleaning process involved reading the data with missing
-value using na(), reading the columns route8-11 as character columns
-using col_types(), cleaning the column names using
-janitor::clean_names(), selecting the desired columns using select(),
-and converting entry variable using mutate() and ifelse() functions. The
-resulting dataset has 19 columns and 1868 rows. The data is not tidy
-because routes1-11 can be put together in two columns: route_name and
-route_value.
-
-- 465 distinct stations in the dataset.
-
-- 468 stations are ada compliant.
-
-- ~38% of stations with vending allow entrance.
-
-- 91 distinct stations serve the A train after data is reformatted so
-  that route number and name are distinct variables.
-
-- of the 91 distinct stations that serve the A train, only 34 stations
-  are ADA compliant.
 
 ``` r
 #read data using read_csv() from tidyverse
@@ -70,30 +45,28 @@ nyc_data |> sapply(class)
     ##            route9           route10           route11 
     ##       "character"       "character"       "character"
 
-``` r
-#check dimensions of dataset
-dim_desc(nyc_data)
-```
+The cleaned NYC dataset contains line, station_name, station_latitude,
+station_longitude, routes1-11, entry, vending, entrance_type, ada
+variables. The cleaning process involved reading the data with missing
+value using na(), reading the columns route8-11 as character columns
+using col_types(), cleaning the column names using
+janitor::clean_names(), selecting the desired columns using select(),
+and converting entry variable using mutate() and ifelse() functions. The
+resulting dataset has no. of. rows and columns: **\[1,868 x 19\]** . The
+data is not tidy because routes1-11 can be put together in two columns:
+route_name and route_value.
 
-    ## [1] "[1,868 x 19]"
+- number of distinct stations in the dataset. :**465**
 
-``` r
-#number of distinct line_station_names
-nyc_data |> select(line,station_name)  |>
-  unite("line_station_name", line:station_name) |> 
- n_distinct() 
-```
+- number of stations are ada compliant. **468**
 
-    ## [1] 465
+- ~38% proportion of stations with vending allow entrance
 
-``` r
-#number of stations that are ada compliant
-table(nyc_data$ada)
-```
+- 91 distinct stations serve the A train after data is reformatted so
+  that route number and name are distinct variables.
 
-    ## 
-    ## FALSE  TRUE 
-    ##  1400   468
+- of the 91 distinct stations that serve the A train, only 34 stations
+  are ADA compliant.
 
 ``` r
 #proportion of stations with entry but with out vending
@@ -142,113 +115,3 @@ unite("line_station_name", line:station_name) |>
 ```
 
     ## [1] 34
-
-------------------------------------------------------------------------
-
-## problem 2
-
-Mr. trash wheel data has 651 rows and 15 columns. Professor trash wheel
-data has 119 rows and 14 columns. Gwynnda trash wheel data has 263 rows
-and 13 columns.
-
-The combined data has 1033 rows and 15 columns.
-
-The weight in tons of trash collected by professor trash wheel is
-246.74.
-
-The number of cigarette butts collected by Gwynnda trash wheel in 2022
-is 205410.
-
-``` r
-#read mr_trash_wheel data
-mr_trash_wheel = readxl::read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
-                            sheet = "Mr. Trash Wheel", 
-                            col_names=TRUE,na="") |>
-  #remove empty columns 
-  select(-"...15",-"...16") |>
-  #clean names
-  janitor::clean_names() |>
-  #drop rows with empty dumpster values
-  drop_na(dumpster) |> 
-  #convert sports balls to integer and round it off
-  mutate(sports_balls = as.integer(round(sports_balls),digits=0)) |>
-  #create a new variable
-  mutate(wheel_name = "mr_trash_wheel")
-```
-
-    ## New names:
-    ## • `` -> `...15`
-    ## • `` -> `...16`
-
-``` r
-#read professor trash wheel data
-prof_trash_wheel = readxl::read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
-                            sheet = "Professor Trash Wheel", col_names=TRUE,na="") |>
-  #clean names
-  janitor::clean_names() |>
-  #drop rows with empty dumpster values
-  drop_na(dumpster) |> 
-  #convert year to character for bindin purposes
-  mutate(year=as.character(year)) |> 
-  #create new variable
-  mutate(wheel_name = "prof_trash_wheel")
-
-#read gwynnda data 
-g_trash_wheel = readxl::read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
-                            sheet = "Gwynnda Trash Wheel", col_names=TRUE,na="") |>
-  #clean names 
-  janitor::clean_names() |>
-  #drop rows with empty dumpster values 
-  drop_na(dumpster) |>
-  #convert year to character for bindin purposes
-  mutate(year=as.character(year)) |> 
-  #create new variable
-  mutate(wheel_name = "g_trash_wheel")
-
-#combine tables 
-trash_wheel_tidy = 
-  bind_rows(mr_trash_wheel, prof_trash_wheel, g_trash_wheel) 
-
-#get dimensions of tables 
-dim_desc(mr_trash_wheel)
-```
-
-    ## [1] "[651 x 15]"
-
-``` r
-dim_desc(prof_trash_wheel)
-```
-
-    ## [1] "[119 x 14]"
-
-``` r
-dim_desc(g_trash_wheel)
-```
-
-    ## [1] "[263 x 13]"
-
-``` r
-dim(trash_wheel_tidy)
-```
-
-    ## [1] 1033   15
-
-``` r
-#total trash collected by pro_trash_wheel
-sum(prof_trash_wheel$weight_tons,na.rm=TRUE)
-```
-
-    ## [1] 246.74
-
-``` r
-#number of cigarette butts collected by g_trash_wheel in 2022
-g_trash_wheel |>  filter(year%in%"2022")  |>
-  summarize(sum_cig_butts = sum(cigarette_butts, na.rm=TRUE))
-```
-
-    ## # A tibble: 1 × 1
-    ##   sum_cig_butts
-    ##           <dbl>
-    ## 1        205410
-
-Problem3:
